--- a/02-aulas-praticas/capitulo-22-aula-1-nosso-primeiro-iframe/style.css
+++ b/02-aulas-praticas/capitulo-22-aula-1-nosso-primeiro-iframe/style.css
@@ -9,6 +9,52 @@
 
 body{
     height: 100vh;
+    overflow-x: hidden;
 }
 
 /* ------------------------------------------------------------ ESTILIZANDO O NOSSO HTML -------------------------------------------------------- */
+
+article{
+    text-indent: 1vw;
+    padding: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.3em;
+    background-color: rgba(255, 247, 0, 0.700);
+}
+
+article > h1 {
+    text-align: center;
+    margin-bottom: 4vh;
+}
+
+article > aside {
+    text-align: center;
+    margin-bottom: 4vh;
+}
+
+
+section.iframes{
+    background-color: black;
+    color: yellow;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    overflow-x: hidden;
+    gap: 30px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    width: 100vw;
+    height: 100vh;
+}
+
+.titulo-do-iframe{
+    font-variant: small-caps;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bolder;
+    text-align: center;
+    display: block;
+    
+    
+   
+}
